--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "wayne's-portfolio",
+  "name": "wayne-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "verify:cdn": "node scripts/verify-cdn-config.js"
   },
   "dependencies": {
+    "cloudinary": "^2.8.0",
     "lucide-react": "^0.556.0",
-    "react-dom": "^19.2.1",
-    "react": "^19.2.1"
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
